Fix code compile and format